--- a/Assets/App/App.asmdef
+++ b/Assets/App/App.asmdef
@@ -2,6 +2,7 @@
     "name": "App",
     "rootNamespace": "",
     "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
